First revision of home page

--- a/index.html
+++ b/index.html
@@ -53,14 +53,10 @@
     </div>
 
     <h2>Install</h2>
-<p>gem install ice_cube</p>
-<h2>License</h2>
-<p>MIT</p>
-<h2>Authors</h2>
-<p>John Crepezzi</p>
-<h2>Contact</h2>
-<p>John Crepezzi (john@crepezzi.com)<br/>      </p>
+    <p>gem install ice_cube</p>
 
+    <h2>Contributors</h2>
+    <p>John Crepezzi<br>Mat Brown</p>
 
     <h2>Download</h2>
     <p>
@@ -73,12 +69,35 @@
       <pre>$ git clone git://github.com/seejohnrun/ice_cube</pre>
     </p>
 
+    <h2>License</h2>
+    <p>
+      (The MIT License)
+
+      Copyright © 2010 John Crepezzi
+
+      Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the ‘Software’), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
+
+      The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
+
+      THE SOFTWARE IS PROVIDED ‘AS IS’, WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
+    </p>
+
     <div class="footer">
       get the source code on GitHub : <a href="http://github.com/seejohnrun/ice_cube">seejohnrun/ice_cube</a>
     </div>
 
   </div>
 
+  <!-- Analytics Code -->
+  <script type="text/javascript">
+  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+  </script>
+  <script type="text/javascript">
+  try {
+  var pageTracker = _gat._getTracker("UA-10989970-3");
+  pageTracker._trackPageview();
+  } catch(err) {}</script>
   
 </body>
 </html>
