move syntax file

--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@ title: seejohnrun/ice_cube @ GitHub
       schedule.first(5)
       {% endhighlight %}
       
-      Fri Oct 13 13:55:59 -0400 2017
-      Fri Oct 13 13:55:59 -0400 2023 
-      Fri Oct 13 13:55:59 -0400 2028 
-      Fri Oct 13 13:55:59 -0400 2034 
-      Fri Oct 13 13:55:59 -0500 2045
+      <em>
+        Fri Oct 13 13:55:59 -0400 2017<br>
+        Fri Oct 13 13:55:59 -0400 2023<br>
+        Fri Oct 13 13:55:59 -0400 2028<br>
+        Fri Oct 13 13:55:59 -0400 2034<br> 
+        Fri Oct 13 13:55:59 -0500 2045<br>
+      </em>
     </p>  
     
     <h2>Install</h2>
