Update to stype

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ title: seejohnrun/ice_cube @ GitHub
 
 	<title>seejohnrun/ice_cube @ GitHub</title>
 	
+	<link href='css/syntax.css' rel='stylesheet' type='text/css'>
 	<style type="text/css">
 		body {
   		margin-top: 1.0em;
